@@ -7,6 +7,10 @@ release 69.9.0
    more data than we envisaged when these tables were set up.
  - Update pulldown_metrics autoqc check to use the up-to-date Picard
    metrics via GATK, use CRAM files instead of BAM files as input.  
+ - Drop redundant tag_index column from the tag_metrics QC database
+   table. The results of this QC check are always per lane. Only two
+   distinct values in this culumn - NULL and -1, the latter from pre-
+   composition times.
 
 release 69.8.1
  - bug fix npg_substitution_metrics.pl to not bail on single read data
